// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileUploader /> should render FileUploader component in desktop mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dc-file-dropzone"
        tabindex="0"
      >
        <input
          accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
          autocomplete="off"
          data-testid="file_upload_input"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <div
          class="dc-file-dropzone__content"
        >
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            <svg
              class="dc-icon dc-file-dropzone__message-icon"
              height="50"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
              />
            </svg>
            <div
              class="dc-file-dropzone__message-subtitle"
            >
              Drop file or click here to upload
            </div>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dc-file-dropzone"
      tabindex="0"
    >
      <input
        accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
        autocomplete="off"
        data-testid="file_upload_input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="dc-file-dropzone__content"
      >
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          <svg
            class="dc-icon dc-file-dropzone__message-icon"
            height="50"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
            />
          </svg>
          <div
            class="dc-file-dropzone__message-subtitle"
          >
            Drop file or click here to upload
          </div>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FileUploader /> should render FileUploader component in mobile mode 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dc-file-dropzone"
        tabindex="0"
      >
        <input
          accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
          autocomplete="off"
          data-testid="file_upload_input"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <div
          class="dc-file-dropzone__content"
        >
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            <svg
              class="dc-icon dc-file-dropzone__message-icon"
              height="50"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
              />
            </svg>
            <div
              class="dc-file-dropzone__message-subtitle"
            >
              Click here to upload
            </div>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dc-file-dropzone"
      tabindex="0"
    >
      <input
        accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
        autocomplete="off"
        data-testid="file_upload_input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="dc-file-dropzone__content"
      >
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          <svg
            class="dc-icon dc-file-dropzone__message-icon"
            height="50"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
            />
          </svg>
          <div
            class="dc-file-dropzone__message-subtitle"
          >
            Click here to upload
          </div>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FileUploader /> should show error message when larger files are uploaded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dc-file-dropzone dc-file-dropzone--has-file dc-file-dropzone--has-error"
        tabindex="0"
      >
        <input
          accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
          autocomplete="off"
          data-testid="file_upload_input"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <div
          class="dc-file-dropzone__content"
        >
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--exit dc-file-dropzone__message--exit-active"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            <svg
              class="dc-icon dc-file-dropzone__message-icon"
              height="50"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
              />
            </svg>
            <div
              class="dc-file-dropzone__message-subtitle"
            >
              Drop file or click here to upload
            </div>
          </span>
          <span
            class="dc-text dc-file-dropzone__filename"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-bold); --text-align: var(--text-align-center); max-width: calc(365px - 3.2rem);"
          />
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter dc-file-dropzone__message--enter-active"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-loss-danger); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            File size should be 8MB or less
          </span>
        </div>
      </div>
      <div
        class="account-poa__upload-remove-btn-container"
      >
        <svg
          class="dc-icon account-poa__upload-remove-btn account-poa__upload-remove-btn--error dc-icon--secondary"
          data-testid="removeFileIcon"
          height="16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <use
            xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-close-circle"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dc-file-dropzone dc-file-dropzone--has-file dc-file-dropzone--has-error"
      tabindex="0"
    >
      <input
        accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
        autocomplete="off"
        data-testid="file_upload_input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="dc-file-dropzone__content"
      >
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--exit dc-file-dropzone__message--exit-active"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          <svg
            class="dc-icon dc-file-dropzone__message-icon"
            height="50"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
            />
          </svg>
          <div
            class="dc-file-dropzone__message-subtitle"
          >
            Drop file or click here to upload
          </div>
        </span>
        <span
          class="dc-text dc-file-dropzone__filename"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-bold); --text-align: var(--text-align-center); max-width: calc(365px - 3.2rem);"
        />
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter dc-file-dropzone__message--enter-active"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-loss-danger); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          File size should be 8MB or less
        </span>
      </div>
    </div>
    <div
      class="account-poa__upload-remove-btn-container"
    >
      <svg
        class="dc-icon account-poa__upload-remove-btn account-poa__upload-remove-btn--error dc-icon--secondary"
        data-testid="removeFileIcon"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <use
          xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-close-circle"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FileUploader /> should show error message when multiple files are uploaded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dc-file-dropzone dc-file-dropzone--has-file dc-file-dropzone--has-error"
        tabindex="0"
      >
        <input
          accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
          autocomplete="off"
          data-testid="file_upload_input"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <div
          class="dc-file-dropzone__content"
        >
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--exit dc-file-dropzone__message--exit-active"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            <svg
              class="dc-icon dc-file-dropzone__message-icon"
              height="50"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
              />
            </svg>
            <div
              class="dc-file-dropzone__message-subtitle"
            >
              Drop file or click here to upload
            </div>
          </span>
          <span
            class="dc-text dc-file-dropzone__filename"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-bold); --text-align: var(--text-align-center); max-width: calc(365px - 3.2rem);"
          />
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter dc-file-dropzone__message--enter-active"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-loss-danger); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            File uploaded is not supported
          </span>
        </div>
      </div>
      <div
        class="account-poa__upload-remove-btn-container"
      >
        <svg
          class="dc-icon account-poa__upload-remove-btn account-poa__upload-remove-btn--error dc-icon--secondary"
          data-testid="removeFileIcon"
          height="16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <use
            xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-close-circle"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dc-file-dropzone dc-file-dropzone--has-file dc-file-dropzone--has-error"
      tabindex="0"
    >
      <input
        accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
        autocomplete="off"
        data-testid="file_upload_input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="dc-file-dropzone__content"
      >
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--exit dc-file-dropzone__message--exit-active"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          <svg
            class="dc-icon dc-file-dropzone__message-icon"
            height="50"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
            />
          </svg>
          <div
            class="dc-file-dropzone__message-subtitle"
          >
            Drop file or click here to upload
          </div>
        </span>
        <span
          class="dc-text dc-file-dropzone__filename"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-bold); --text-align: var(--text-align-center); max-width: calc(365px - 3.2rem);"
        />
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter dc-file-dropzone__message--enter-active"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-loss-danger); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          File uploaded is not supported
        </span>
      </div>
    </div>
    <div
      class="account-poa__upload-remove-btn-container"
    >
      <svg
        class="dc-icon account-poa__upload-remove-btn account-poa__upload-remove-btn--error dc-icon--secondary"
        data-testid="removeFileIcon"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <use
          xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-close-circle"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FileUploader /> should show error message when unsupported file is uploaded 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="dc-file-dropzone dc-file-dropzone--has-file dc-file-dropzone--has-error"
        tabindex="0"
      >
        <input
          accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
          autocomplete="off"
          data-testid="file_upload_input"
          style="display: none;"
          tabindex="-1"
          type="file"
        />
        <div
          class="dc-file-dropzone__content"
        >
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--exit dc-file-dropzone__message--exit-active"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            <svg
              class="dc-icon dc-file-dropzone__message-icon"
              height="50"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <use
                xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
              />
            </svg>
            <div
              class="dc-file-dropzone__message-subtitle"
            >
              Drop file or click here to upload
            </div>
          </span>
          <span
            class="dc-text dc-file-dropzone__filename"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-bold); --text-align: var(--text-align-center); max-width: calc(365px - 3.2rem);"
          />
          <span
            class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter dc-file-dropzone__message--enter-active"
            style="--text-size: var(--text-size-xxs); --text-color: var(--text-loss-danger); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
          >
            File uploaded is not supported
          </span>
        </div>
      </div>
      <div
        class="account-poa__upload-remove-btn-container"
      >
        <svg
          class="dc-icon account-poa__upload-remove-btn account-poa__upload-remove-btn--error dc-icon--secondary"
          data-testid="removeFileIcon"
          height="16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <use
            xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-close-circle"
          />
        </svg>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="dc-file-dropzone dc-file-dropzone--has-file dc-file-dropzone--has-error"
      tabindex="0"
    >
      <input
        accept="image/png, image/jpeg, image/jpg, image/gif, application/pdf"
        autocomplete="off"
        data-testid="file_upload_input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="dc-file-dropzone__content"
      >
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--exit dc-file-dropzone__message--exit-active"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          <svg
            class="dc-icon dc-file-dropzone__message-icon"
            height="50"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-cloud-upload"
            />
          </svg>
          <div
            class="dc-file-dropzone__message-subtitle"
          >
            Drop file or click here to upload
          </div>
        </span>
        <span
          class="dc-text dc-file-dropzone__filename"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-general); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-bold); --text-align: var(--text-align-center); max-width: calc(365px - 3.2rem);"
        />
        <span
          class="dc-text dc-file-dropzone__message dc-file-dropzone__message--enter dc-file-dropzone__message--enter-active"
          style="--text-size: var(--text-size-xxs); --text-color: var(--text-loss-danger); --text-lh: var(--text-lh-m); --text-weight: var(--text-weight-normal); --text-align: var(--text-align-center);"
        >
          File uploaded is not supported
        </span>
      </div>
    </div>
    <div
      class="account-poa__upload-remove-btn-container"
    >
      <svg
        class="dc-icon account-poa__upload-remove-btn account-poa__upload-remove-btn--error dc-icon--secondary"
        data-testid="removeFileIcon"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <use
          xlink:href="/public/sprites/common.784d255e58485e5ee9f70cc9a40c7ffe.svg#ic-close-circle"
        />
      </svg>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
